update: CSS z-index fix and etc bugs fix

--- a/components/mobile/Layout/ConfigModal/ConfigModal.module.scss
+++ b/components/mobile/Layout/ConfigModal/ConfigModal.module.scss
@@ -12,7 +12,7 @@
   background-color: $G-background-color-default;
   transform: translateX(100%);
   transition: transform .2s ease-in 0s;
-  z-index: 9999;
+  z-index: 999;
   color: $G-color-black-medium;
 
   .menuBox {
@@ -28,7 +28,7 @@
 
       .icon {
         margin-left: auto;
-        opacity: 0.3;
+        opacity: 0.2;
       }
     }
   }
