--- a/components/mobile/Layout/FooterNav/FooterNav.module.scss
+++ b/components/mobile/Layout/FooterNav/FooterNav.module.scss
@@ -9,7 +9,7 @@
   display: flex;
   border-top: 1px solid $G-color-border-table-bold;
   width: 100%;
-  z-index: 999;
+  z-index: 9999;
   background-color: $G-color-white-extra;
 
   .configButton {
